--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Michael Beishline # your name (or website title) here
 logo: "/images/Untidesign.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I took several programming courses where I learned R, SQL, and Python. Here I've illustrated my coursework and projects from my schooling at Jessup.
   <br><br>
   Second description 
   <br><br>
