--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Michael Beishline # your name (or website title) here
 logo: "/images/Untidesign.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I took several programming courses where I learned R, SQL, and Python. Here I've illustrated my coursework and projects from my schooling at Jessup.
+  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I studied several programming languages, including R, SQL, and Python.
   <br><br>
-  Second description 
+ Here I've illustrated my coursework and projects from my schooling at Jessup Univeristy.
   <br><br>
   <a href="https://www.linkedin.com/in/michaelbeishline">View My LinkedIn Profile</a> 
   
