--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Michael Beishline # your name (or website title) here
+ertitle: Michael Beishline # your name (or website title) here
 logo: "/images/Untidesign.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I studied several programming languages, including R, SQL, and Python.
