--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 ertitle: Michael Beishline # your name (or website title) here
 logo: "/images/Untidesign.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I studied several programming languages, including R, SQL, and Python.
+  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I developed a solid understanding in data science where we similated our own data and also pulled data from other sources.
   <br><br>
-  Here I've illustrated my coursework and projects from my schooling at Jessup Univeristy.
+  Here are several projects and schoolwork from my time at Jessup Univeristy.
   <br><br>
   <a href="https://www.linkedin.com/in/michaelbeishline">View My LinkedIn Profile</a> 
   
