--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ertitle: Michael Beishline # your name (or website title) here
 logo: "/images/Untidesign.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I developed a solid understanding in data science where we similated our own data and also pulled data from other sources.
+  A recent graduate from Jessup University with a degree in mathematics. While at Jessup, I developed a solid understanding in data analysis where we pulled data from other sources or simulated our own data, cleaned that data and then pulled insights from it.
   <br><br>
   Here are several projects and schoolwork from my time at Jessup Univeristy.
   <br><br>
